Fix text wrapping of stepper tooltip

--- a/packages/components/src/stepper/Stepper.less
+++ b/packages/components/src/stepper/Stepper.less
@@ -21,7 +21,8 @@
       font-weight: @font-weight-semi-bold;
       transition: color 0.15s ease-in-out;
 
-      &:hover, &:focus {
+      &:hover,
+      &:focus {
         color: @brand-light-blue-minus-10;
       }
     }
@@ -37,6 +38,7 @@
 
   & .tooltip {
     top: 24px !important;
+    white-space: nowrap;
   }
 
   & .tooltip-container {
